--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "fontsource-roboto": "^3.0.3",
     "next": "^10.0.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-json-view": "^1.19.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
